Added target_include_directories(zstd lib and lib/common) for static build.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -361,6 +361,8 @@ if(NOT BUILD_SHARED_LIBS)
     if(SEAL_USE_ZSTD AND NOT MSVC)
         if(SEAL_BUILD_DEPS)
             add_dependencies(seal ${zstd_static})
+            target_include_directories(seal PUBLIC $<BUILD_INTERFACE:${zstd_SOURCE_DIR}/lib>)
+            target_include_directories(seal PUBLIC $<BUILD_INTERFACE:${zstd_SOURCE_DIR}/lib/common>)
             seal_combine_archives(seal ${zstd_static})
         else()
             target_link_libraries(seal PRIVATE ${zstd_static})
