--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -341,6 +341,8 @@ if(NOT BUILD_SHARED_LIBS)
     if(SEAL_USE_ZLIB)
         if(SEAL_BUILD_DEPS)
             add_dependencies(seal ${zlib})
+            target_include_directories(seal PRIVATE $<BUILD_INTERFACE:${zlib_SOURCE_DIR}>)
+            target_include_directories(seal PRIVATE $<BUILD_INTERFACE:$<TARGET_PROPERTY:${zlib},BINARY_DIR>>)
             seal_combine_archives(seal ${zlib})
         else()
             target_link_libraries(seal PRIVATE ${zlib})
@@ -350,8 +352,8 @@ if(NOT BUILD_SHARED_LIBS)
     if(SEAL_USE_ZSTD)
         if(SEAL_BUILD_DEPS)
             add_dependencies(seal ${zstd_static})
-            target_include_directories(seal PUBLIC $<BUILD_INTERFACE:${zstd_SOURCE_DIR}/lib>)
-            target_include_directories(seal PUBLIC $<BUILD_INTERFACE:${zstd_SOURCE_DIR}/lib/common>)
+            target_include_directories(seal PRIVATE $<BUILD_INTERFACE:${zstd_SOURCE_DIR}/lib>)
+            target_include_directories(seal PRIVATE $<BUILD_INTERFACE:${zstd_SOURCE_DIR}/lib/common>)
             seal_combine_archives(seal ${zstd_static})
         else()
             target_link_libraries(seal PRIVATE ${zstd_static})
