--- a/dotnet/nuget/SEALNet-multi.nuspec.in
+++ b/dotnet/nuget/SEALNet-multi.nuspec.in
@@ -19,6 +19,7 @@
     <tags>c# crypto cryptography homomorphic encryption</tags>
     <dependencies>
       <group targetFramework=".NETStandard2.0" />
+      <group targetFramework="Xamarin.iOS10" />
     </dependencies>
   </metadata>
   <files>
@@ -28,8 +29,11 @@
     <file src="$NUGET_MACOS_SEAL_C_PATH$" target="runtimes/macos-x64" />
     <file src="$NUGET_ANDROIDARM64_SEAL_C_PATH$" target="runtimes/android-arm64" />
     <file src="$NUGET_ANDROIDX64_SEAL_C_PATH$" target="runtimes/android-x64" />
+    <file src="$NUGET_IOS64_SEAL_C_PATH$" target="runtimes/ios64" />
     <file src="../../lib/dotnet/$configuration$/netstandard2.0/SEALNet.dll" target="lib/netstandard2.0/" />
     <file src="../../lib/dotnet/$configuration$/SEALNet.xml" target="lib/netstandard2.0/" />
+    <file src="../../lib/dotnet/$configuration$/ios/SEALNet.dll" target="lib/Xamarin.iOS10/" />
+    <file src="../../lib/dotnet/$configuration$/SEALNet.xml" target="lib/Xamarin.iOS10/" />
     <file src="../../LICENSE" target="LICENSE" />
   </files>
 </package>
