Need to link separately with sealc for iOS

--- a/dotnet/nuget/SEALNet.targets.in
+++ b/dotnet/nuget/SEALNet.targets.in
@@ -37,5 +37,10 @@
       <ForceLoad>True</ForceLoad>
       <IsCxx>True</IsCxx>
     </NativeReference>
+    <NativeReference Include="$(MSBuildThisFileDirectory)../runtimes/ios64/libseal.a">
+      <Kind>Static</Kind>
+      <ForceLoad>True</ForceLoad>
+      <IsCxx>True</IsCxx>
+    </NativeReference>
   </ItemGroup>
 </Project>
