--- a/dotnet/nuget/SEALNet-multi.nuspec.in
+++ b/dotnet/nuget/SEALNet-multi.nuspec.in
@@ -24,12 +24,13 @@
   </metadata>
   <files>
     <file src="SEALNet.targets" target="build/Microsoft.Research.SEALNet.targets" />
-    <file src="$NUGET_WINDOWS_SEAL_C_PATH$" target="runtimes/win10-x64" />
-    <file src="$NUGET_LINUX_SEAL_C_PATH$" target="runtimes/linux-x64" />
-    <file src="$NUGET_MACOS_SEAL_C_PATH$" target="runtimes/macos-x64" />
-    <file src="$NUGET_ANDROIDARM64_SEAL_C_PATH$" target="runtimes/android-arm64" />
-    <file src="$NUGET_ANDROIDX64_SEAL_C_PATH$" target="runtimes/android-x64" />
-    <file src="$NUGET_IOS64_SEAL_C_PATH$" target="runtimes/ios64" />
+    <file src="$NUGET_WINDOWS_SEAL_C_PATH$" target="runtimes/win10-x64/" />
+    <file src="$NUGET_LINUX_SEAL_C_PATH$" target="runtimes/linux-x64/" />
+    <file src="$NUGET_MACOS_SEAL_C_PATH$" target="runtimes/macos-x64/" />
+    <file src="$NUGET_ANDROIDARM64_SEAL_C_PATH$" target="runtimes/android-arm64/" />
+    <file src="$NUGET_ANDROIDX64_SEAL_C_PATH$" target="runtimes/android-x64/" />
+    <file src="$NUGET_IOS64_SEAL_C_PATH$" target="runtimes/ios64/" />
+    <file src="$NUGET_IOS64_SEAL_PATH$" target="runtimes/ios64/" />
     <file src="../../lib/dotnet/$configuration$/netstandard2.0/SEALNet.dll" target="lib/netstandard2.0/" />
     <file src="../../lib/dotnet/$configuration$/SEALNet.xml" target="lib/netstandard2.0/" />
     <file src="../../lib/dotnet/$configuration$/ios/SEALNet.dll" target="lib/Xamarin.iOS10/" />
