Fixes to specific intrinsic detection

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -265,7 +265,7 @@ else()
     set(SEAL_USE___INT128_OPTION_STR "Use __int128")
     cmake_dependent_option(SEAL_USE___INT128 ${SEAL_USE___INT128_OPTION_STR} ON "SEAL_USE_INTRIN" OFF)
     mark_as_advanced(FORCE SEAL_USE___INT128)
-    if(NOT SEAL__INT128_FOUND)
+    if(NOT SEAL___INT128_FOUND)
         set(SEAL_USE___INT128 OFF CACHE BOOL ${SEAL_USE___INT128_OPTION_STR} FORCE)
     endif()
 
@@ -277,18 +277,18 @@ else()
     endif()
 endif()
 
-set(SEAL_USE_ADDCARRY_U64_OPTION_STR "Use _addcarry_u64")
-cmake_dependent_option(SEAL_USE_ADDCARRY_U64 ${SEAL_USE_ADDCARRY_U64_OPTION_STR} ON "SEAL_USE_INTRIN" OFF)
-mark_as_advanced(FORCE SEAL_USE_ADDCARRY_U64)
-if(NOT SEAL_ADDCARRY_U64_FOUND)
-    set(SEAL_USE_ADDCARRY_U64 OFF CACHE BOOL ${SEAL_USE_ADDCARRY_U64_OPTION_STR} FORCE)
+set(SEAL_USE__ADDCARRY_U64_OPTION_STR "Use _addcarry_u64")
+cmake_dependent_option(SEAL_USE__ADDCARRY_U64 ${SEAL_USE__ADDCARRY_U64_OPTION_STR} ON "SEAL_USE_INTRIN" OFF)
+mark_as_advanced(FORCE SEAL_USE__ADDCARRY_U64)
+if(NOT SEAL__ADDCARRY_U64_FOUND)
+    set(SEAL_USE__ADDCARRY_U64 OFF CACHE BOOL ${SEAL_USE__ADDCARRY_U64_OPTION_STR} FORCE)
 endif()
 
-set(SEAL_USE_SUBBORROW_U64_OPTION_STR "Use _subborrow_u64")
-cmake_dependent_option(SEAL_USE_SUBBORROW_U64 ${SEAL_USE_SUBBORROW_U64_OPTION_STR} ON "SEAL_USE_INTRIN" OFF)
-mark_as_advanced(FORCE SEAL_USE_SUBBORROW_U64)
-if(NOT SEAL_SUBBORROW_U64_FOUND)
-    set(SEAL_USE_SUBBORROW_U64 OFF CACHE BOOL ${SEAL_USE_SUBBORROW_U64_OPTION_STR} FORCE)
+set(SEAL_USE__SUBBORROW_U64_OPTION_STR "Use _subborrow_u64")
+cmake_dependent_option(SEAL_USE__SUBBORROW_U64 ${SEAL_USE__SUBBORROW_U64_OPTION_STR} ON "SEAL_USE_INTRIN" OFF)
+mark_as_advanced(FORCE SEAL_USE__SUBBORROW_U64)
+if(NOT SEAL__SUBBORROW_U64_FOUND)
+    set(SEAL_USE__SUBBORROW_U64 OFF CACHE BOOL ${SEAL_USE__SUBBORROW_U64_OPTION_STR} FORCE)
 endif()
 
 # [option] SEAL_USE_${A_SPECIFIC_MEMSET_METHOD} (default: ON, advanced)
