Relocated SEALNet.sln.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -190,8 +190,7 @@ endif()
 set(BUILD_SHARED_LIBS_STR "Build shared library")
 option(BUILD_SHARED_LIBS ${BUILD_SHARED_LIBS_STR} OFF)
 if(MSVC AND BUILD_SHARED_LIBS)
-    message(WARNING "This build system only supports a static build; disabling `BUILD_SHARED_LIBS`")
-    set(BUILD_SHARED_LIBS OFF CACHE BOOL ${BUILD_SHARED_LIBS_STR} FORCE)
+    message(FATAL_ERROR "On Windows only static build is supported; set `BUILD_SHARED_LIBS=OFF`")
 endif()
 
 # [option] SEAL_THROW_ON_TRANSPARENT_CIPHERTEXT (default: ON)
@@ -408,7 +407,7 @@ if(SEAL_BUILD_SEAL_C)
     if(NOT BUILD_SHARED_LIBS)
         target_link_libraries(sealc PUBLIC seal)
     else()
-        target_link_libraries(sealc PUBLIC seal_shared)
+        message(FATAL_ERROR "SEAL_C requires `BUILD_SHARED_LIBS=OFF`")
     endif()
 
     seal_install_target(sealc SEALTargets)
