--- a/pipelines/windows.yml
+++ b/pipelines/windows.yml
@@ -8,7 +8,7 @@ steps:
   displayName: 'NuGet restore from Solution'
   inputs:
     command: 'restore'
-    restoreSolution: 'SEAL.sln'
+    restoreSolution: 'SEALNet.sln'
     feedsToUse: 'select'
 
 - task: NuGetCommand@2
