--- a/dotnet/examples/SEALNetExamples.csproj
+++ b/dotnet/examples/SEALNetExamples.csproj
@@ -7,6 +7,7 @@
     <Company>Microsoft Corporation</Company>
     <Description>.NET wrapper examples for Microsoft SEAL</Description>
     <Copyright>Microsoft Corporation 2020</Copyright>
+    <Platforms>AnyCPU;x64;x86</Platforms>
   </PropertyGroup>
 
   <PropertyGroup>
