--- a/pipelines/windows.yml
+++ b/pipelines/windows.yml
@@ -52,7 +52,7 @@ steps:
 - task: CMake@1
   displayName: 'Configure SEAL'
   inputs:
-    cmakeArgs: .. -DCMAKE_BUILD_TYPE='Debug' -DSEAL_BUILD_DEPS=ON -DSEAL_BUILD_TESTS=ON -DSEAL_BUILD_EXAMPLES=ON
+    cmakeArgs: .. -DCMAKE_BUILD_TYPE='Debug' -DSEAL_BUILD_DEPS=ON -DSEAL_BUILD_TESTS=ON -DSEAL_BUILD_EXAMPLES=ON -DSEAL_BUILD_SEAL_C=ON
     workingDirectory: '$(Build.SourcesDirectory)/build'
 
 - task: MSBuild@1
