--- a/dotnet/nuget/SEALNet-multi.nuspec.in
+++ b/dotnet/nuget/SEALNet-multi.nuspec.in
@@ -33,8 +33,8 @@
     <file src="$NUGET_IOS64_SEAL_PATH$" target="runtimes/ios64/" />
     <file src="../../lib/dotnet/$configuration$/netstandard2.0/SEALNet.dll" target="lib/netstandard2.0/" />
     <file src="../../lib/dotnet/$configuration$/SEALNet.xml" target="lib/netstandard2.0/" />
-    <file src="../../lib/dotnet/$configuration$/ios/SEALNet.dll" target="lib/Xamarin.iOS10/" />
-    <file src="../../lib/dotnet/$configuration$/SEALNet.xml" target="lib/Xamarin.iOS10/" />
+    <file src="../../lib/dotnet/ios/$configuration$/netstandard2.0/SEALNet.dll" target="lib/Xamarin.iOS10/" />
+    <file src="../../lib/dotnet/ios/$configuration$/SEALNet.xml" target="lib/Xamarin.iOS10/" />
     <file src="../../LICENSE" target="LICENSE" />
   </files>
 </package>
