--- a/pipelines/pipeline-PR-Debug-All.yml
+++ b/pipelines/pipeline-PR-Debug-All.yml
@@ -37,3 +37,7 @@ stages:
       parameters:
         debug: true
         name: Android
+    - template: jobs.yml
+      parameters:
+        debug: true
+        name: iOS
